코딩 좋아 추가

--- a/django_server/templates/user/login.html
+++ b/django_server/templates/user/login.html
@@ -12,6 +12,7 @@
 {% block content %}
     <div class="wrapper">
         <h2>Loging Page</h2>
+        <h2>코딩 좋아 ㅎㅎㅎ</h2>
         <br>
 
         {% if messages %}
